--- a/newalist-body.html
+++ b/newalist-body.html
@@ -1,4 +1,4 @@
-<!-- 2025-05-18 14:36:44 -->
+<!-- 2025-05-25 14:12:17 -->
 
 <style>
     .hope-ui-light,
@@ -9,6 +9,8 @@
 
 <script>
     const MAIN_COLOR = 'rgb(240, 128, 128)';
+    const LIGHT_BG_COLOR = 'rgba(255, 255, 255, 0.8)';
+    const DARK_BG_COLOR = 'rgb(32, 36, 37)';
 
     const observer = new MutationObserver(() => {
         if (!location.pathname.startsWith('/@manage') && !location.pathname.startsWith('/@login')) {
@@ -20,7 +22,7 @@
                 }
 
                 if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.65)', 'rgba(0, 0, 0, 0.09)', MAIN_COLOR].includes(computedStyle.backgroundColor)) {
-                    element.style.backgroundColor = 'rgba(255, 255, 255, 0.8)';
+                    element.style.backgroundColor = LIGHT_BG_COLOR;
                 }
             });
 
@@ -32,7 +34,7 @@
                 }
 
                 if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.09)', MAIN_COLOR].includes(computedStyle.backgroundColor)) {
-                    element.style.backgroundColor = 'rgb(32, 36, 37)';
+                    element.style.backgroundColor = DARK_BG_COLOR;
                 }
             });
         }
