--- a/newalist-body.html
+++ b/newalist-body.html
@@ -1,4 +1,4 @@
-<!-- 2025-05-25 14:12:17 -->
+<!-- 2025-05-31 10:02:43 -->
 
 <style>
     .hope-ui-light,
@@ -8,39 +8,44 @@
 </style>
 
 <script>
-    const MAIN_COLOR = 'rgb(240, 128, 128)';
+    const LIGHT_SELECTOR = '.hope-ui-light :not(.hope-tooltip):not(.hope-close-button):not(a)';
+    const DARK_SELECTOR = '.hope-ui-dark :not(.hope-tooltip):not(.hope-close-button):not(a)';
+
+    const THEME_COLOR = 'rgb(240, 128, 128)';
     const LIGHT_BG_COLOR = 'rgba(255, 255, 255, 0.8)';
     const DARK_BG_COLOR = 'rgb(32, 36, 37)';
 
-    const observer = new MutationObserver(() => {
+    const beautifier = new MutationObserver(() => {
+        document.querySelector('a[href="/@login"]').addEventListener('click', beautifier.disconnect);
+
         if (!location.pathname.startsWith('/@manage') && !location.pathname.startsWith('/@login')) {
-            document.querySelectorAll('.hope-ui-light :not(.hope-tooltip):not(.hope-close-button):not(a)').forEach(element => {
+            document.querySelectorAll(LIGHT_SELECTOR).forEach(element => {
                 const computedStyle = getComputedStyle(element);
 
                 if (computedStyle.backgroundImage !== 'none') {
                     return;
                 }
 
-                if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.65)', 'rgba(0, 0, 0, 0.09)', MAIN_COLOR].includes(computedStyle.backgroundColor)) {
+                if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.65)', 'rgba(0, 0, 0, 0.09)', THEME_COLOR].includes(computedStyle.backgroundColor)) {
                     element.style.backgroundColor = LIGHT_BG_COLOR;
                 }
             });
 
-            document.querySelectorAll('.hope-ui-dark :not(.hope-tooltip):not(.hope-close-button):not(a)').forEach(element => {
+            document.querySelectorAll(DARK_SELECTOR).forEach(element => {
                 const computedStyle = getComputedStyle(element);
 
                 if (computedStyle.backgroundImage !== 'none') {
                     return;
                 }
 
-                if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.09)', MAIN_COLOR].includes(computedStyle.backgroundColor)) {
+                if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.09)', THEME_COLOR].includes(computedStyle.backgroundColor)) {
                     element.style.backgroundColor = DARK_BG_COLOR;
                 }
             });
         }
     });
 
-    observer.observe(document.body, {
+    beautifier.observe(document.body, {
         childList: true, subtree: true
     });
 </script>
