--- a/newalist-body.html
+++ b/newalist-body.html
@@ -8,12 +8,18 @@
 </style>
 
 <script>
-    const LIGHT_SELECTOR = '.hope-ui-light :not(.hope-tooltip):not(.hope-close-button):not(a)';
-    const DARK_SELECTOR = '.hope-ui-dark :not(.hope-tooltip):not(.hope-close-button):not(a)';
-
     const THEME_COLOR = 'rgb(240, 128, 128)';
     const LIGHT_BG_COLOR = 'rgba(255, 255, 255, 0.8)';
     const DARK_BG_COLOR = 'rgb(32, 36, 37)';
+
+    const LIGHT_SELECTOR = '.hope-ui-light :not(.hope-tooltip):not(.hope-close-button):not(a)';
+    const DARK_SELECTOR = '.hope-ui-dark :not(.hope-tooltip):not(.hope-close-button):not(a)';
+    const IGNORED_COLORS = [
+        'rgba(0, 0, 0, 0)',
+        'rgba(0, 0, 0, 0.65)',
+        'rgba(0, 0, 0, 0.09)',
+        THEME_COLOR
+    ];
 
     var _wr = function (type) {
         var orig = history[type];
@@ -37,7 +43,7 @@
                     return;
                 }
 
-                if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.65)', 'rgba(0, 0, 0, 0.09)', THEME_COLOR].includes(computedStyle.backgroundColor)) {
+                if (!IGNORED_COLORS.includes(computedStyle.backgroundColor)) {
                     element.style.backgroundColor = LIGHT_BG_COLOR;
                 }
             });
@@ -49,7 +55,7 @@
                     return;
                 }
 
-                if (!['rgba(0, 0, 0, 0)', 'rgba(0, 0, 0, 0.09)', THEME_COLOR].includes(computedStyle.backgroundColor)) {
+                if (!IGNORED_COLORS.includes(computedStyle.backgroundColor)) {
                     element.style.backgroundColor = DARK_BG_COLOR;
                 }
             });
@@ -65,7 +71,7 @@
 
     observe();
 
-    function waitLogin() {
+    function fixLogin() {
         document.querySelector('a[href="/@login"]').addEventListener('click', () => {
             beautifier.disconnect();
         });
@@ -73,6 +79,6 @@
 
     window.addEventListener('replaceState', observe);
     window.addEventListener('pushState', observe);
-    window.addEventListener('keydown', waitLogin);
-    window.addEventListener('mousedown', waitLogin);
+    window.addEventListener('keydown', fixLogin);
+    window.addEventListener('mousedown', fixLogin);
 </script>
