--- a/body.html
+++ b/body.html
@@ -112,7 +112,7 @@
         }
     }
 
-    const beautifier = new Beautifier('rgb(240, 128, 128)'); // 务必在这里填入你设置的主题色，没有设置可以不填
+    const beautifier = new Beautifier(); // 务必在这里填入你设置的主题色，没有设置可以不填
     window.beautifier = beautifier;
     beautifier.observe();
 
