--- a/body.html
+++ b/body.html
@@ -1,4 +1,4 @@
-<!-- v1 -->
+<!-- v2 -->
 
 <!-- 修正部分区域的透明 -->
 <style>
@@ -36,12 +36,22 @@
             * 可以通过window.beautifier访问实例对象
             * 
          */
+        static ignoredSelectors = [
+            '.hope-tooltip',
+            '.hope-tooltip__arrow',
+            '.hope-checkbox__control',
+            '.hope-close-button',
+            'button:not([aria-haspopup])',
+            'a'
+        ];
+
+        static lightSelector = `.hope-ui-light :not(${Beautifier.ignoredSelectors.join('):not(')})`;
+        static darkSelector = `.hope-ui-dark :not(${Beautifier.ignoredSelectors.join('):not(')})`;
+
         static themeColor = 'rgb(24, 144, 255)';  // 这是默认的主题色
         static lightBgColor = 'rgba(255, 255, 255, 0.8)';
         static darkBgColor = 'rgb(32, 36, 37)';
 
-        static lightSelector = '.hope-ui-light :not(.hope-tooltip):not(.hope-close-button):not(a)';
-        static darkSelector = '.hope-ui-dark :not(.hope-tooltip):not(.hope-close-button):not(a)';
         static ignoredColors = [
             'rgba(0, 0, 0, 0)',
             'rgba(0, 0, 0, 0.65)',
@@ -112,7 +122,7 @@
         }
     }
 
-    const beautifier = new Beautifier(); // 务必在这里填入你设置的主题色，没有设置可以不填
+    const beautifier = new Beautifier('rgb(240, 128, 128)'); // 务必在这里填入你设置的主题色，没有设置可以不填
     window.beautifier = beautifier;
     beautifier.observe();
 
