--- a/body.html
+++ b/body.html
@@ -1,4 +1,4 @@
-<!-- v2 -->
+<!-- v3 -->
 
 <!-- 修正部分区域的透明 -->
 <style>
@@ -9,6 +9,8 @@
 </style>
 
 <script type="module">
+    // v2
+
     // 提供用来监听代码控制的 url 变化的事件
     (() => {
         const wrapHistoryMethod = (type) => {
@@ -40,31 +42,24 @@
             '.hope-tooltip',
             '.hope-tooltip__arrow',
             '.hope-checkbox__control',
-            '.hope-close-button',
-            'button:not([aria-haspopup])',
-            'a'
+            '.hope-modal__overlay',
+            'button:not(.hope-menu__trigger)',
+            'svg'
         ];
 
-        static lightSelector = `.hope-ui-light :not(${Beautifier.ignoredSelectors.join('):not(')})`;
-        static darkSelector = `.hope-ui-dark :not(${Beautifier.ignoredSelectors.join('):not(')})`;
+        static getSelector(mainSelector) {
+            return `${mainSelector} :not(${Beautifier.ignoredSelectors.join('):not(')})`;
+        }
 
-        static themeColor = 'rgb(24, 144, 255)';  // 这是默认的主题色
+        static lightSelector = Beautifier.getSelector('.hope-ui-light');
+        static darkSelector = Beautifier.getSelector('.hope-ui-dark');
+
         static lightBgColor = 'rgba(255, 255, 255, 0.8)';
         static darkBgColor = 'rgb(32, 36, 37)';
 
-        static ignoredColors = [
-            'rgba(0, 0, 0, 0)',
-            'rgba(0, 0, 0, 0.65)',
-            'rgba(0, 0, 0, 0.09)'
-        ];
+        static specificPrefix = 'rgba(132, 133, 141';
 
-        constructor(themeColor = Beautifier.themeColor, lightBgColor = Beautifier.lightBgColor, darkBgColor = Beautifier.darkBgColor) {
-            this.themeColor = themeColor;
-            this.lightBgColor = lightBgColor;
-            this.darkBgColor = darkBgColor;
-
-            this.ignoredColors = [...Beautifier.ignoredColors, this.themeColor];
-
+        constructor() {
             this.observer = null;
         }
 
@@ -73,7 +68,7 @@
          */
         #rewriteBgColor(theme) {
             let selector = theme === 'light' ? Beautifier.lightSelector : Beautifier.darkSelector;
-            let bgColor = theme === 'light' ? this.lightBgColor : this.darkBgColor;
+            let bgColor = theme === 'light' ? Beautifier.lightBgColor : Beautifier.darkBgColor;
 
             document.querySelectorAll(selector).forEach(element => {
                 const computedStyle = getComputedStyle(element);
@@ -82,7 +77,8 @@
                     return;
                 }
 
-                if (!this.ignoredColors.includes(computedStyle.backgroundColor)) {
+                if (computedStyle.backgroundColor !== 'rgba(0, 0, 0, 0)' &&
+                    !computedStyle.backgroundColor.startsWith(Beautifier.specificPrefix)) {
                     element.style.backgroundColor = bgColor;
                     element.setAttribute('data-beautified', 'true');
                 }
@@ -98,7 +94,7 @@
 
         observe() {
             this.observer = new MutationObserver(this.#beautify.bind(this));
-            this.observer.observe(document.body, {
+            this.observer.observe(document.getElementById('root'), {
                 childList: true,
                 subtree: true
             });
@@ -122,8 +118,9 @@
         }
     }
 
-    const beautifier = new Beautifier('rgb(240, 128, 128)'); // 务必在这里填入你设置的主题色，没有设置可以不填
+    const beautifier = new Beautifier();
     window.beautifier = beautifier;
+
     beautifier.observe();
 
     // 一个愚蠢到有点无敌的修复机制，不过工作良好
