everything is better

--- a/body_with_login.html
+++ b/body_with_login.html
@@ -1,4 +1,4 @@
-<!-- v3 -->
+<!-- v3-1 -->
 
 <!-- 修正部分区域的透明 -->
 <style>
@@ -8,23 +8,20 @@
     }
 </style>
 
-<script type="module">
-    // v3
+<!-- 登录界面优化 -->
+<style>
+    .hope-c-PJLV-ifjOQLV-css {
+        box-shadow: var(--hope-shadows-lg);
+    }
 
-    // 提供用来监听代码控制的 url 变化的事件
-    (() => {
-        const wrapHistoryMethod = (type) => {
-            const orig = history[type];
-            return function (...args) {
-                const rv = orig.apply(this, args);
-                const event = new CustomEvent(type, { detail: args });
-                window.dispatchEvent(event);
-                return rv;
-            };
-        };
-        history.pushState = wrapHistoryMethod('pushState');
-        history.replaceState = wrapHistoryMethod('replaceState');
-    })();
+    .hope-c-PJLV-ihWgyFw-css,
+    .hope-c-PJLV-ibiABng-css {
+        display: none;
+    }
+</style>
+
+<script type="module">
+    // v3-1
 
     class Beautifier {
         /**
@@ -83,7 +80,7 @@
         }
 
         #beautify() {
-            if (!location.pathname.startsWith('/@manage') && !location.pathname.startsWith('/@login')) {
+            if (!location.pathname.startsWith('/@manage')) {
                 this.#rewriteStyle('light');
                 this.#rewriteStyle('dark');
             }
@@ -120,23 +117,4 @@
     window.beautifier = beautifier;
 
     beautifier.observe();
-
-    // 一个愚蠢到有点无敌的修复机制，不过工作良好
-    (() => {
-        function fixLogin(pathname) {
-            if (pathname.startsWith('/@login')) {
-                beautifier.undo();
-            }
-            else {
-                beautifier.disconnect();
-                beautifier.observe();
-            }
-        }
-
-        ['popstate', 'pushState', 'replaceState'].forEach(eventType => {
-            addEventListener(eventType, () => {
-                fixLogin(location.pathname);
-            });
-        });
-    })();
 </script>
