--- a/head.html
+++ b/head.html
@@ -1,4 +1,4 @@
-<!-- v2 -->
+<!-- v3 -->
 
 <!-- 引入自定义字体 -->
 <link rel="stylesheet" href="https://s4.zstatic.net/ajax/libs/lxgw-wenkai-webfont/1.7.0/lxgwwenkai-regular.min.css">
@@ -48,11 +48,11 @@
 
 <!-- 看板娘 -->
 <script>if (localStorage.getItem('modelId') === null) {
-        localStorage.setItem('modelId', '9'); // 设置默认模型ID
+        localStorage.setItem('modelId', '3'); // 设置默认模型ID
         localStorage.setItem('modelTexturesId', '0'); // 设置默认皮肤ID
     }
 </script>
-<script src="https://cdn.mmoe.work/live2d-widget/autoload.js"></script>
+<script src="https://l2d.mmoe.work/dist/autoload.js"></script>
 
 <script
     src="https://s4.zstatic.net/ajax/libs/js-polyfills/0.1.43/polyfill.min.js?features=String.prototype.replaceAll"></script>
