添加高斯模糊支持

--- a/body_with_login.html
+++ b/body_with_login.html
@@ -1,4 +1,4 @@
-<!-- v3-1 -->
+<!-- v3 -->
 
 <!-- 修正部分区域的透明 -->
 <style>
@@ -18,10 +18,38 @@
     .hope-c-PJLV-ibiABng-css {
         display: none;
     }
+    /* --- 登录界面窗口样式 --- */
+
+    /* 浅色模式下的登录窗口 */
+    .hope-ui-light .hope-c-PJLV-ifjOQLV-css {
+        background-color: rgba(255, 255, 255, 0.7) !important;
+        backdrop-filter: blur(10px) !important;
+    }
+
+    /* 深色模式下的登录窗口 */
+    .hope-ui-dark .hope-c-PJLV-iubUra-css {
+        background-color: rgba(32, 36, 37, 0.7) !important;
+        backdrop-filter: blur(10px) !important;
+    }
 </style>
 
 <script type="module">
-    // v3-1
+    // v3
+
+    // 提供用来监听代码控制的 url 变化的事件
+    (() => {
+        const wrapHistoryMethod = (type) => {
+            const orig = history[type];
+            return function (...args) {
+                const rv = orig.apply(this, args);
+                const event = new CustomEvent(type, { detail: args });
+                window.dispatchEvent(event);
+                return rv;
+            };
+        };
+        history.pushState = wrapHistoryMethod('pushState');
+        history.replaceState = wrapHistoryMethod('replaceState');
+    })();
 
     class Beautifier {
         /**
@@ -51,8 +79,8 @@
         static lightSelector = Beautifier.getSelector('.hope-ui-light');
         static darkSelector = Beautifier.getSelector('.hope-ui-dark');
 
-        static lightBgColor = 'rgba(255, 255, 255, 0.8)';
-        static darkBgColor = 'rgb(32, 36, 37)';
+        static lightBgColor = 'rgba(255, 255, 255, 0.7)';
+        static darkBgColor = 'rgba(32, 36, 37,0.7)';
 
         static specificPrefix = 'rgba(132, 133, 141';
 
@@ -63,26 +91,30 @@
         /**
          * @param {'light'|'dark'} theme
          */
-        #rewriteStyle(theme) {
+        #rewriteBgColor(theme) {
             let selector = theme === 'light' ? Beautifier.lightSelector : Beautifier.darkSelector;
             let bgColor = theme === 'light' ? Beautifier.lightBgColor : Beautifier.darkBgColor;
 
             document.querySelectorAll(selector).forEach(element => {
                 const computedStyle = getComputedStyle(element);
 
+                if (computedStyle.backgroundImage !== 'none') {
+                    return;
+                }
+
                 if (computedStyle.backgroundColor !== 'rgba(0, 0, 0, 0)' &&
                     !computedStyle.backgroundColor.startsWith(Beautifier.specificPrefix)) {
                     element.style.backgroundColor = bgColor;
-
+                    element.style.backdropFilter = 'blur(10px)';
                     element.setAttribute('data-beautified', 'true');
                 }
             });
         }
 
         #beautify() {
-            if (!location.pathname.startsWith('/@manage')) {
-                this.#rewriteStyle('light');
-                this.#rewriteStyle('dark');
+            if (!location.pathname.startsWith('/@manage') && !location.pathname.startsWith('/@login')) {
+                this.#rewriteBgColor('light');
+                this.#rewriteBgColor('dark');
             }
         }
 
@@ -107,7 +139,6 @@
 
             document.body.querySelectorAll('[data-beautified]').forEach(element => {
                 element.style.backgroundColor = '';
-
                 element.removeAttribute('data-beautified');
             });
         }
@@ -117,4 +148,23 @@
     window.beautifier = beautifier;
 
     beautifier.observe();
+
+    // 一个愚蠢到有点无敌的修复机制，不过工作良好
+    (() => {
+        function fixLogin(pathname) {
+            if (pathname.startsWith('/@login')) {
+                beautifier.undo();
+            }
+            else {
+                beautifier.disconnect();
+                beautifier.observe();
+            }
+        }
+
+        ['popstate', 'pushState', 'replaceState'].forEach(eventType => {
+            addEventListener(eventType, () => {
+                fixLogin(location.pathname);
+            });
+        });
+    })();
 </script>
