--- a/body_with_login.html
+++ b/body_with_login.html
@@ -34,22 +34,7 @@
 </style>
 
 <script type="module">
-    // v3
-
-    // 提供用来监听代码控制的 url 变化的事件
-    (() => {
-        const wrapHistoryMethod = (type) => {
-            const orig = history[type];
-            return function (...args) {
-                const rv = orig.apply(this, args);
-                const event = new CustomEvent(type, { detail: args });
-                window.dispatchEvent(event);
-                return rv;
-            };
-        };
-        history.pushState = wrapHistoryMethod('pushState');
-        history.replaceState = wrapHistoryMethod('replaceState');
-    })();
+    // v3-1
 
     class Beautifier {
         /**
@@ -91,16 +76,12 @@
         /**
          * @param {'light'|'dark'} theme
          */
-        #rewriteBgColor(theme) {
+        #rewriteStyle(theme) {
             let selector = theme === 'light' ? Beautifier.lightSelector : Beautifier.darkSelector;
             let bgColor = theme === 'light' ? Beautifier.lightBgColor : Beautifier.darkBgColor;
 
             document.querySelectorAll(selector).forEach(element => {
                 const computedStyle = getComputedStyle(element);
-
-                if (computedStyle.backgroundImage !== 'none') {
-                    return;
-                }
 
                 if (computedStyle.backgroundColor !== 'rgba(0, 0, 0, 0)' &&
                     !computedStyle.backgroundColor.startsWith(Beautifier.specificPrefix)) {
@@ -112,9 +93,9 @@
         }
 
         #beautify() {
-            if (!location.pathname.startsWith('/@manage') && !location.pathname.startsWith('/@login')) {
-                this.#rewriteBgColor('light');
-                this.#rewriteBgColor('dark');
+            if (!location.pathname.startsWith('/@manage')) {
+                this.#rewriteStyle('light');
+                this.#rewriteStyle('dark');
             }
         }
 
@@ -139,6 +120,7 @@
 
             document.body.querySelectorAll('[data-beautified]').forEach(element => {
                 element.style.backgroundColor = '';
+
                 element.removeAttribute('data-beautified');
             });
         }
@@ -148,23 +130,4 @@
     window.beautifier = beautifier;
 
     beautifier.observe();
-
-    // 一个愚蠢到有点无敌的修复机制，不过工作良好
-    (() => {
-        function fixLogin(pathname) {
-            if (pathname.startsWith('/@login')) {
-                beautifier.undo();
-            }
-            else {
-                beautifier.disconnect();
-                beautifier.observe();
-            }
-        }
-
-        ['popstate', 'pushState', 'replaceState'].forEach(eventType => {
-            addEventListener(eventType, () => {
-                fixLogin(location.pathname);
-            });
-        });
-    })();
 </script>
