修复播放器页面错误填充背景色的问题

--- a/body.html
+++ b/body.html
@@ -44,7 +44,8 @@
             '.hope-checkbox__control',
             '.hope-modal__overlay',
             'button:not(.hope-menu__trigger)',
-            'svg'
+            'svg',
+            '.art-video-player'
         ];
 
         static getSelector(mainSelector) {
