修复全屏比例错误 临时禁用高斯模糊

--- a/body.html
+++ b/body.html
@@ -81,7 +81,7 @@
                 if (computedStyle.backgroundColor !== 'rgba(0, 0, 0, 0)' &&
                     !computedStyle.backgroundColor.startsWith(Beautifier.specificPrefix)) {
                     element.style.backgroundColor = bgColor;
-                    element.style.backdropFilter = 'blur(10px)';
+                    //element.style.backdropFilter = 'blur(10px)';
                     element.setAttribute('data-beautified', 'true');
                 }
             });
